# social-media-download

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  nixpacks.toml  railway.toml
src/: main.rs
src/bot/: handlers.rs  mod.rs
src/downloader/: core.rs
src/models/: types.rs
src/utils/: helpers.rs
