[package]
name = "social-downloader-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
indicatif = "0.17"
tokio-util = "0.7"
futures = "0.3"
tokio-stream = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
tempfile = "3.8"
warp = "0.3"